[package]
name = "detangle"
version = "0.1.0"
authors = ["Jonathan Doda <jonathan@jdoda.ca>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
futures = "^0.1.26"
csv = "1.1"
seed = "^0.4.0"
wasm-bindgen = "^0.2.45"
web-sys = "^0.3.19"


[dev-dependencies]
wasm-bindgen-test = "0.2.45" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'